# cc-profile

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: cc-profile.rb
docs/: homebrew-automation.md
docs/specs/: development.md  git.md  rust.md  rust_testing.md
docs/superpowers/active/2026-06-30-config-toml-path/: 2026-06-30-config-toml-path-aio.md
docs/superpowers/active/2026-06-30-init/: 2026-06-30-init-check.md  2026-06-30-init-design.md  2026-06-30-init-goal.md  2026-06-30-init-manual.md  2026-06-30-init-plan-1.md  2026-06-30-init-plan-2.md  2026-06-30-init-plan-3.md  2026-06-30-init-plan-4.md  2026-06-30-init-plan.md
docs/superpowers/active/2026-07-01-homebrew-release-automation/: 2026-07-01-homebrew-release-automation-aio.md
docs/superpowers/active/2026-07-01-self-update/: 2026-07-01-self-update-artifact-audit.md  2026-07-01-self-update-check.md  2026-07-01-self-update-design.md  2026-07-01-self-update-plan-1.md  2026-07-01-self-update-plan-2.md  2026-07-01-self-update-plan-5.md  2026-07-01-self-update-plan.md
docs/superpowers/active/2026-07-01-self-update-release/: 2026-07-01-self-update-release-checklist.md
docs/superpowers/active/2026-07-02-exec-claude-launch/: 2026-07-02-exec-claude-launch-aio.md
docs/superpowers/active/2026-07-02-pr-only-ci/: 2026-07-02-pr-only-ci-design.md
docs/superpowers/active/2026-07-13-show-command/: 2026-07-13-show-command-aio.md
docs/superpowers/active/2026-07-15-codex-strip-context-marker/: 2026-07-15-codex-strip-context-marker-aio.md
docs/superpowers/active/2026-07-15-start-codex/: 2026-07-15-start-codex-aio.md
docs/superpowers/done/2026-06-30-config-toml-path/: 2026-06-30-config-toml-path-aio.md
docs/superpowers/done/2026-06-30-init/: 2026-06-30-init-design.md  2026-06-30-init-plan-2.md  2026-06-30-init-plan-4.md  2026-06-30-init-plan.md
docs/superpowers/done/2026-07-01-homebrew-release-automation/: 2026-07-01-homebrew-release-automation-aio.md
packaging/homebrew/: cc-profile.rb.tmpl
scripts/: ci.sh  render-formula.sh
src/: cli.rs  interactive.rs  lib.rs  main.rs
src/config/: mod.rs  model.rs  repository.rs  validation.rs
src/services/: claude_args.rs  env_vars.rs  install_method.rs  launch.rs  mod.rs  profiles.rs  receipt.rs  release.rs  self_replace.rs  sync_codex.rs  update.rs  update_check_cache.rs  update_test_env_lock.rs
tests/: homebrew_runbook_test.sh  install_platform_mapping_test.sh  readme_homebrew_test.sh  release_workflow_test.sh  render_formula_test.sh
tests/fixtures/: SHA256SUMS.sample  cc-profile-test-claude.rs  cc-profile-test-codex.rs
tests/integration/: cli.rs  common.rs  launch.rs  main.rs  sync.rs  update.rs
(+12 files in other folders)
