[package]
name = "cc-profile"
version = "0.1.0"
edition = "2021"

[lib]
name = "cc_profile"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.103"
bon = "3.9.2"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
tempfile = "3.23.0"