[package]
name = "cc-profile"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Profile management for Claude Code endpoints and models"
license = "MIT"
repository = "https://github.com/therealhieu/cc-profile"
homepage = "https://github.com/therealhieu/cc-profile"
readme = "README.md"
keywords = ["claude", "cli", "profiles", "anthropic"]
categories = ["command-line-utilities"]
exclude = [
    "AGENTS.md",
    "docs/superpowers/**",
    "tests/**",
]

[[bin]]
name = "cc-profile"
path = "src/main.rs"

[lib]
name = "cc_profile"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.103"
bon = "3.9.2"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
semver = "1.0.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
toml_edit = "0.25.13"
ureq = { version = "3.0.12", default-features = false, features = ["rustls"] }
flate2 = "1.1.2"
tar = "0.4.44"
sha2 = "0.10.9"
hex = "0.4.3"
tempfile = "3.23.0"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }